--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   "devDependencies": {
     "babel-core": "^6.1.20",
     "babel-plugin-transform-runtime": "^6.1.18",
-    //    "babel-preset-es2015": "^6.1.18",
     "babel-preset-es2015-node5": "^1.1.0",
     "del": "^2.0.2",
     "gulp": "^3.6.0",
@@ -42,10 +41,12 @@
   "license": "MIT",
   "dependencies": {
     "babel-runtime": "^6.0.14",
+    "body-parser": "^1.14.1",
     "co": "^4.6.0",
     "debug": "^2.2.0",
     "express": "^4.13.3",
     "jade": "^1.11.0",
-    "mongorito": "^1.4.0"
+    "mongorito": "^1.4.0",
+    "underscore": "^1.8.3"
   }
 }
